# src/routes/userRouter.ts
@@ -7,34 +7,19 @@ const userRouter = Router();
 userRouter.post("/users/login", userController.loginLocal);
 userRouter.post("/users", userController.createUser);
 
+
 userRouter.get("/users", authMiddleware, userController.getAllUsers);
-userRouter.get(
-  "/users/:id",
-  authMiddleware,
-  checkRole(["admin", "president", "secretary", "treasurer", "user"]),
-  userController.getUserById
+
+userRouter.get(  "/users/:id",  authMiddleware,
+    checkRole(["admin", "president", "secretary", "treasurer", "user"]),  userController.getUserById
 );
 
- userRouter.put(
-      "/users/complete-profile",  
-      authMiddleware,
-      userController.completeProfile
+ userRouter.put("/users/complete-profile", authMiddleware,userController.completeProfile
     );
 
+userRouter.put("/users/:id", authMiddleware,
+   checkRole(["admin", "president", "secretary"]),  userController.updateUser);
 
-
-
-userRouter.put(
-  "/users/:id",
-  authMiddleware,
-  checkRole(["admin", "president", "secretary"]),
-  userController.updateUser
-);
-userRouter.delete(
-  "/users/:id",
-  authMiddleware,
-  checkRole(["admin"] ),
-  userController.deleteUser
-);
+userRouter.delete("/users/:id", authMiddleware,checkRole(["admin"] ),  userController.deleteUser);
    
 export default userRouter;
